Update UserFeedDto.java